fix: min-main-height scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,16 +16,24 @@
   }
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  display: flex;
+  flex-direction: column;
 }
 
 @layer components {
   .min-main-h {
-    min-height: calc(100vh - 60px);
+    flex-grow: 1;
   }
 }
 
